--- a/src/main/ng/src/assets/custom.scss
+++ b/src/main/ng/src/assets/custom.scss
@@ -12,7 +12,7 @@ https://coolors.co/50514f-f47c79-ffe066-247ba0-70c1b3
 https://www.w3schools.com/bootstrap4/bootstrap_ref_all_classes.asp
 
 fontawesome as icon - http://gauger.io/fonticon | https://stackoverflow.com/a/39397829/234110
-
+popper - https://github.com/MrFrankel/ngx-popper
 */
 
 
