--- a/src/main/ng/src/app/app.component.scss
+++ b/src/main/ng/src/app/app.component.scss
@@ -6,3 +6,10 @@
     font-size: 12px;
     min-height: 200px;
 }
+
+app-growli{
+    position:absolute;
+    right:8px;
+    bottom:8px;
+    z-index:9999;
+}
