--- a/src/main/resources/public/assets/custom.scss
+++ b/src/main/resources/public/assets/custom.scss
@@ -11,6 +11,8 @@ https://coolors.co/50514f-f47c79-ffe066-247ba0-70c1b3
 
 https://www.w3schools.com/bootstrap4/bootstrap_ref_all_classes.asp
 
+fontawesome as icon - http://gauger.io/fonticon | https://stackoverflow.com/a/39397829/234110
+popper - https://github.com/MrFrankel/ngx-popper
 */
 
 
@@ -34,18 +36,8 @@ $font-family-monospace:       "Roboto Mono", SFMono-Regular, Menlo, Monaco, Cons
 // BOOTSTRAP:
 @import "~bootstrap-scss/bootstrap.scss";
 
-
-html, body {
-    position: relative;
-    min-height: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-app-root {
-    display: block;
-    height: 100%;
-    padding-bottom: 96px;
+.btn-group{
+    margin-right: 10px;
 }
 
 .footer {
@@ -56,4 +48,6 @@ app-root {
     line-height: 60px;
     background-color: #f5f5f5;
 }
-  
+body > app-root > .container-fluid {
+    padding: 10px 0 60px 0;
+}
