--- a/src/main/ng/src/app/app.component.html
+++ b/src/main/ng/src/app/app.component.html
@@ -57,3 +57,6 @@
 <app-cookie></app-cookie>
 <app-growli></app-growli>
 <app-loadi #loadiComponent></app-loadi>
+<div id="versionInfo" class="sr-only text-hide">
+    {{version | json}}
+</div>
