caffeine cache; loader cleanup

--- a/src/main/ng/src/app/load/loadi/loadi.component.html
+++ b/src/main/ng/src/app/load/loadi/loadi.component.html
@@ -1,6 +1,4 @@
-<div class="loaderContent" *ngFor="let loadi of loadis">
-    <div class="loaderWrap">
-        <div class="loader"></div>
-    </div>
-    <div class="msg text-primary text-center">{{loadi.msg}}</div>
+<div id="loader-wrapper">
+    <div id="loader"></div>
 </div>
+<div class="content">{{loadi.msg}}</div>
