--- a/src/main/ng/src/app/app.component.html
+++ b/src/main/ng/src/app/app.component.html
@@ -16,10 +16,6 @@
             <div class="btn-group" role="group" aria-label="Rason Cache Options">
                 <button #btnSaveJson type="button" class="btn btn-info" [ngClass]="disableBtnClass" title="Save to Rason Cache" (click)="createJson(tainput.value)"><i class="fas fa-upload"></i></button>
                 <button #btnUrl type="button" class="btn btn-info" title="Load from url" (click)="toggleHideUrl()"><i class="fas fa-location-arrow"></i></button>
-                <button #btnNofication type="button" class="btn btn-info" title="Previously Saved" (click)="showPopper()">
-                    <i class="fas fa-bell"></i>
-                    <span class="badge badge-secondary">{{slugs?.length}}</span>
-                </button>
             </div>
         </div>
     </div>
@@ -27,23 +23,33 @@
 
 
 <div class="container-fluid">
-    <div class="row" [hidden]="hideUrl">
-        <div class="col-12">
-            <div class="form-group">
-                <input type="text" class="form-control ip" [ngClass]="urlClass" #urlInput [ngModel]="urlInputVal" (keyup)="updateUrl(urlInput.value)" placeholder="https://api.github.com/repos/anandchakru/rason">
+    <div class="row">
+        <div class="col-11">
+            <div class="row" [hidden]="hideUrl">
+                <div class="col-12">
+                    <div class="form-group">
+                        <input type="text" class="form-control ip" [ngClass]="urlClass" #urlInput [ngModel]="urlInputVal" (keyup)="updateUrl(urlInput.value)" placeholder="https://api.github.com/repos/anandchakru/rason">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="form-group hundred">
+                        <textarea id="tainput" class="form-control ip" [ngClass]="txtClass" #tainput [ngModel]="taInputVal" (keyup)="update(tainput.value)" placeholder='{"id":"1","name":"rason"}'></textarea>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <app-json-view #appJsonView [json]="inputJson" [expanded]="expanded" *ngIf="!err?.length"></app-json-view>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <div class="form-group hundred">
-                <textarea id="tainput" class="form-control ip" [ngClass]="txtClass" #tainput [ngModel]="taInputVal" (keyup)="update(tainput.value)" placeholder='{"id":"1","name":"rason"}'></textarea>
+        <div class="col-1 bg-secondary d-none d-md-block d-lg-block d-xl-block">
+            <input type="text" class="form-control ip" #searchNotifications [ngModel]="searchNotificationsVal" (keyup)="search(searchNotifications.value)" placeholder="search">
+            <div class="list-group">
+                <a href="#" (click)="loadUrl('api/'+key.slug)" class="list-group-item list-group-item-action" *ngFor="let key of slugs">{{key.slug}}</a>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <app-json-view #appJsonView [json]="inputJson" [expanded]="expanded" *ngIf="!err?.length"></app-json-view>
         </div>
     </div>
 </div>
