--- a/src/main/ng/src/app/load/loadi/loadi.component.html
+++ b/src/main/ng/src/app/load/loadi/loadi.component.html
@@ -1,4 +1,8 @@
-<div id="loader-wrapper">
-    <div id="loader"></div>
+<div class="loaderContent" *ngFor="let loadi of loadis">
+    <div id="loader-wrapper">
+        <div id="loader"></div>
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+    </div>
+    <div class="content">{{loadi.msg}}</div>
 </div>
-<div class="content">{{loadi.msg}}</div>
