subscribe only once

--- a/src/main/ng/src/app/app.component.html
+++ b/src/main/ng/src/app/app.component.html
@@ -84,7 +84,7 @@
   
         <!-- Modal footer -->
         <div class="modal-footer">
-            <button type="button" class="btn btn-danger" (click)="saveJson(slugInput.value)">Save</button>
+            <button type="button" class="btn btn-danger" (click)="saveJson(slugInput.value, tainput.value)">Save</button>
         </div>
   
       </div>
