--- a/src/main/ng/src/assets/custom.scss
+++ b/src/main/ng/src/assets/custom.scss
@@ -51,3 +51,7 @@ $font-family-monospace:       "Roboto Mono", SFMono-Regular, Menlo, Monaco, Cons
 body > app-root > .container-fluid {
     padding: 10px 0 60px 0;
 }
+
+.pointer{
+    cursor: pointer;
+}
