--- a/src/main/ng/src/app/app.component.html
+++ b/src/main/ng/src/app/app.component.html
@@ -16,7 +16,7 @@
             <div class="btn-group" role="group" aria-label="Rason Cache Options">
                 <button #btnSaveJson type="button" class="btn btn-info" [ngClass]="disableBtnClass" title="Save to Rason Cache" (click)="createJson(tainput.value, $event)"><i class="fas fa-upload"></i></button>
                 <button #btnUrl type="button" class="btn btn-info" title="Load from url" (click)="toggleHideUrl()"><i class="fas fa-globe-americas"></i></button>
-                <button #btnInfo type="button" class="btn btn-info" title="Load from url" (click)="showVersion()"><i class="fas fa-info"></i></button>
+                <button #btnInfo type="button" class="btn btn-info" title="Version Info" (click)="showVersion()"><i class="fas fa-info"></i></button>
             </div>
         </div>
     </div>
@@ -29,7 +29,12 @@
             <div class="row" [hidden]="hideUrl">
                 <div class="col-12">
                     <div class="form-group">
-                        <input type="text" class="form-control ip" [ngClass]="urlClass" #urlInput [ngModel]="urlInputVal" (keyup)="updateUrl(urlInput.value)" placeholder="https://api.github.com/repos/anandchakru/rason">
+                        <div class="input-group">
+                            <input type="text" class="form-control ip" [ngClass]="urlClass" #urlInput [ngModel]="urlInputVal" placeholder="https://api.github.com/repos/anandchakru/rason" (keyup)="updateUrlByEnter(urlInput.value, $event)">
+                            <span class="input-group-addon input-group-addon-btn bg-white">
+                                <button class="btn btn-primary" type="submit" (click)="updateUrl(urlInput.value)" ><i class="fas fa-download"></i></button>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -53,25 +58,8 @@
                 </div>
             </div>
         </div>
-        <!--
-        <div class="col-1 bg-secondary d-none d-md-block d-lg-block d-xl-block">
-            <input type="text" class="form-control ip" #searchNotifications [ngModel]="searchNotificationsVal" (keyup)="search(searchNotifications.value)" placeholder="search">
-            <div class="list-group">
-                <a href="#" (click)="loadUrl('api/'+ bucket + '/' + key.slug)" class="list-group-item list-group-item-action" *ngFor="let key of slugs">{{key.slug}}</a>
-            </div>
-        </div>
-        -->
     </div>
 </div>
-
-<!--
-<nav class="navbar navbar-expand-sm bg-dark navbar-light fixed-bottom">
-    <div class="container-fluid">
-        <span class="text-white">simple scalable service virtualization (json).
-        <code (click)="showVersion()" class="pointer">{{version.tag}}</code></span>
-    </div>
-</nav>
--->
 
 <app-cookie></app-cookie>
 <app-growli></app-growli>
