--- a/src/main/ng/src/app/app.component.scss
+++ b/src/main/ng/src/app/app.component.scss
@@ -8,8 +8,9 @@
 }
 
 app-growli{
-    position:absolute;
-    right:8px;
-    bottom:8px;
-    z-index:9999;
+    position: absolute;
+    left: 8px;
+    right: 8px;
+    bottom: 8px;
+    z-index: 9999;
 }
