json-viewer overflow scroll

--- a/src/main/ng/src/app/json-view/json-view.component.scss
+++ b/src/main/ng/src/app/json-view/json-view.component.scss
@@ -3,6 +3,7 @@
 @import '~bootstrap/scss/_variables.scss';
 .json-viewer{
   border-left: 1px solid $secondary;
+  overflow: scroll;
 }
 .rep-obj {
   display: flex;
