--- a/src/main/ng/src/app/app.component.scss
+++ b/src/main/ng/src/app/app.component.scss
@@ -19,3 +19,10 @@ app-growli{
         left: 8px;
     }
 }
+
+#versionInfo{
+    font-size: xx-small;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
